hello-world/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: hello-world
spec:
  ports:
  - name: whoami
    port: 80
    targetPort: 80
  selector:
    app: whoami
